syntax = "proto3";

package chip.rpc;

message Empty {
}

message Button {
  //0=FUNCTION 1=LIGHTING 2=THREAD_START 3=BLE_START
  uint32 idx = 1;

  // 0=release 1=push
  uint32 action = 2;
}

message LightEnabled {
  bool enabled = 1;
}

message DeviceDetails {
  string vendor_id = 1;
  string product_id = 2;
  string fw_version = 3;
  string serial_number = 4;
}

service LightingService {
  rpc ButtonEvent(Button) returns (Empty){}
  rpc SetState(LightEnabled) returns (Empty){}
  rpc GetState(Empty) returns (LightEnabled){}
}

service DeviceCommon {
  rpc FactoryReset(Empty) returns (Empty){}
  rpc Reset(Empty) returns (Empty){}
  rpc TriggerOta(Empty) returns (Empty){}
  rpc DeviceInfo(Empty) returns (DeviceDetails){}
}